<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reservation.reserve_once.ReserveOnce">

    <TextView
        android:id="@+id/reserve_once_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="예약 하기"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choice_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/choice_date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/once_calendar"
        app:layout_constraintTop_toBottomOf="@id/reserve_once_tv" />

    <CalendarView
        android:id="@+id/once_calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choice_date_tv" />

    <TextView
        android:id="@+id/choice_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_time"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/choice_date_tv"
        app:layout_constraintTop_toBottomOf="@id/once_calendar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/time_btn1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/master_user_button_design"
        android:text="@string/eight_ten"
        app:layout_constraintEnd_toStartOf="@id/time_btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choice_time_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/time_btn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/master_user_button_design"
        android:text="@string/nine_twelve"
        app:layout_constraintEnd_toStartOf="@id/time_btn3"
        app:layout_constraintStart_toEndOf="@id/time_btn1"
        app:layout_constraintTop_toBottomOf="@id/choice_time_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/time_btn3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/master_user_button_design"
        android:text="10:00 - 13:00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/time_btn2"
        app:layout_constraintTop_toBottomOf="@id/choice_time_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/time_btn4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/master_user_button_design"
        android:text="11:00 - 14:00"
        app:layout_constraintEnd_toStartOf="@id/time_btn5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_btn1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/time_btn5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/master_user_button_design"
        android:text="12:00 - 15:00"
        app:layout_constraintEnd_toStartOf="@id/time_btn6"
        app:layout_constraintStart_toEndOf="@id/time_btn4"
        app:layout_constraintTop_toBottomOf="@id/time_btn1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/time_btn6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/master_user_button_design"
        android:text="13:00 - 16:00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/time_btn5"
        app:layout_constraintTop_toBottomOf="@id/time_btn1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/loginbutton_design"
        android:enabled="false"
        android:text="다음"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_btn6" />

</androidx.constraintlayout.widget.ConstraintLayout>